# cold-case-analysis

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHECKLIST.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  UI_CHANGES.md  WORKFLOW_CHANGES.md  demo_pdf_flow.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: cold-case-analyzer.md
.github/workflows/: cicd.yml  deploy.yml
docs/: AGENTS_POC_QUICK_REFERENCE.md  AGENTS_STREAMLIT_INTEGRATION.md  ARCHITECTURE.md  AZURE_STORAGE.md  CONNECTION_RELIABILITY.md  DOCUMENTATION_UPDATE_FINAL_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.txt  DYNAMIC_SYSTEM_PROMPTS_README.md  LOGFIRE_IMPLEMENTATION.md  LOGFIRE_INSTRUMENTATION.md  LOGFIRE_MONITORING.md  OPENAI_AGENTS_POC.md  QUICK_START.md  SEPARATION_OF_CONCERNS_REFACTORING.md  SINGLETON_OPENAI_CLIENT.md  STATE_PERSISTENCE.md  STYLE_GUIDE.md  WORKFLOWS.md
latam_case_analysis/: pdf_extractor.py  txt_converter.py
src/: app.py  config.py
src/.streamlit/: config.toml
src/components/: agents_integration.py  analysis_manager.py  analysis_workflow.py  auth.py  col_processor.py  confidence_display.py  css.py  database.py  input_handler.py  jurisdiction.py  jurisdiction_detection.py  main_workflow.py  pil_provisions_handler.py  progress_banner.py  sidebar.py  theme_classifier.py
src/models/: __init__.py  analysis_models.py  classification_models.py
src/openai_agents_poc/: README.md  __init__.py  models.py  orchestrator.py  poc_demo.py  sub_agents.py
src/prompts/: README.md  populate_readme.py  prompt_selector.py
src/tests/: test_azure_storage.py  (+22 more)
(+38 files in other folders)
